# my-stdlib

./: .gitignore  CMakeLists.txt  configure  gen-makefile.sh
src/: myalloc.c  myqueue.c  mystack.c
src/include/: myalloc.h  mystack.h
src/include/my-stdlib/: myalloc.h  myqueue.h  mystack.h
